fix little spacing problem

--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -10,7 +10,3 @@
     height: 35px;
    
 }
-
-@media(max-width: 560px){
- 
-}
